Improved Origins tooltip so that it's always visible. Is still quite buggy and could use a complete overhaul, but at least you can read it :)

--- a/src/components/SVGWorldMap.css
+++ b/src/components/SVGWorldMap.css
@@ -24,8 +24,8 @@
   padding: 5px;
   z-index: 10;
 
-  /* Begin off screen (will be overridden later) */
-  left: -1000px;
+  /* Begin invisible (will be overriden later) */
+  opacity: 0;
 }
 
 .assoMapContainer {
